<resources>
    <string name="app_name">MyIslam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">315271182508854</string>
    <string name="fb_login_protocol_scheme">fb315271182508854</string>
    <string name="mosques">Mosques</string>
    <string name="i_prayed">I prayed</string>
    <string name="my_tracker">My tracker</string>
    <string name="you_have_prayed">You have prayed​</string>
    <string name="times">Times</string>
    <string name="weekly">Weekly​</string>
    <string name="monthly">Monthly​</string>
    <string name="yearly">Yearly</string>
    <string name="fard">Fard</string>
    <string name="muakkadah">Muakkadah</string>
    <string name="my_custom_dua">My Custom Dua</string>
    <string name="create_custom_dua">Create Custom Dua</string>
    <string name="name_your_dua_here">Name Your Dua here</string>
    <string name="update_dua">Update Dua</string>
    <string name="your_spiritual_journey_simplified">Your spiritual journey simplified</string>
    <string name="select_your_journey">Select Your Journey</string>
    <string name="hajj">Hajj</string>
    <string name="umrah">Umrah</string>
    <string name="your_hajj_journey">Your Hajj Journey</string>
    <string name="your_umrah_journey">Your Umrah Journey</string>
    <string name="your_hajj_umrah_journey">Your Hajj/Umrah Journey</string>
    <string name="download_certificate">Download Certificate</string>
    <string name="hajj_text">You have become a Hajji
    on the 25thof January
    2019, 14th Jumada 1440.
    You may purchase your
    certificate  <u>here</u>.</string>
    <string name="faith">Faith</string>
    <string name="prayer">Prayer</string>
    <string name="charity">Charity</string>
    <string name="fasting">Fasting</string>
    <string name="pilgrimage">Pilgrimage</string>
    <string name="community">Community</string>
    <string name="collections">Collections</string>
    <string name="haj_pilgrimage">Haj Pilgrimage</string>
    <string name="my_community">My Community</string>
    <string name="settings">Settings</string>
    <string name="names_of_allah">Names of Allah</string>
    <string name="allah">Allah</string>
    <string name="the_quran">The Quran</string>
    <string name="duas_and_misbaha">Duas &amp; Misbaha</string>
    <string name="hadith">Hadith</string>
    <string name="hadiths">Hadiths</string>
    <string name="taweed">Tawheed</string>
    <string name="prophet_muhammad">Prophet Muhammad</string>
    <string name="prophet_muhammad_pbuh">Prophet\nMuhammad\n(PbuH)</string>
    <string name="menu_how_to_pray">How To Pray</string>
    <string name="how_to_pray">How to Pray</string>
    <string name="qibla_locator">Qibla Locator</string>
    <string name="dua">Dua</string>
    <string name="duas">Duas</string>
    <string name="ramadan_calendar">Ramadan calendar</string>
    <string name="zakat_calculator">Zakat Calculator</string>
    <string name="donate">Donate</string>
    <string name="voting">Voting</string>
    <string name="start_preparation">Start Preparation</string>
    <string name="pilgrimage_guide">Pilgrimage Guide</string>
    <string name="find_pilgrim">Find Pilgrim</string>
    <string name="pilgrimage_compass">Pilgrimage compass</string>
    <string name="halal_restaurant">Restaurants</string>
    <string name="feature_coming_soon">Feature Coming Soon</string>
    <string name="txt_faith">lā ʾilāha ʾillā llāh muḥammadun rasūlu llāh\n
There is no god but God. Muhammad is
the messenger of God.</string>
    <string name="favourites">Favourites</string>
    <string name="favourite">Favourite</string>
    <string name="taweed_desc">
        "The concept of “Tawheed” is the most fundamental concept of Islam as a religion and one that each and every muslim should subscribe to. Every Muslim should believe in the one true God alone and should not worship any deity other than Allah.

For one to identify as a muslim, they should have a real understanding of Allah and should possess knowledge of what makes Allah unique and why Allah is the only one worthy of worship.

Islam teaches that Allah(God) has among others, the following qualities that distinguish Allah from all other beings:

Allah knows all things
Allah has power over all things
Allah is the Creator and Was never Created

The concept of Tawheed and Allah’s uniqueness is well articulated in various parts of the Quran, but It is more straightforward and well summarised in the 112th
chapter of the Quran known as “Surat – Ikhlas”. Given below is the translation of that chapter:

“Say: He is Allah, the One and Only; Allah, the Eternal, Absolute; None is born of Allah, nor is He born; And there is none like Allah.”

For one to identify as a muslim, he or she should believe in the oneness of God and should not ascribe any partners to Allah whatsoever. Whoever does not acknowledge Allah in these terms and does not describe Him as being One with no partner or associate does not believe in Tawheed and will be taken out of the fold of Islam."
    </string>
    <string name="prophet_mohammed_final_msg">The Final Messenger</string>
    <string name="my_islam">My Islam</string>
    <string name="one_ummah">One Ummah</string>
    <string name="edt_hint_email">Email</string>
    <string name="txt_dont_have_account">Don\'t have an account?</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_agree_terms">By using My Islam you Agree to our Terms</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_change_pwd">Change Password</string>
    <string name="txt_current_pwd">Current password</string>
    <string name="txt_new_pwd">New password</string>
    <string name="txt_confirm_pwd">Confirm password</string>
    <string name="save">Save</string>
    <string name="txt_create_event">Create Event</string>
    <string name="edt_hint_event_name">Event Name</string>
    <string name="edt_hint_event_type">Event Type</string>
    <string name="edt_hint_address">Address</string>
    <string name="edt_hint_country">Country</string>
    <string name="edt_hint_city">City</string>
    <string name="edt_hint_mobile_number">Mobile Number</string>
    <string name="edt_hint_description">Description</string>
    <string name="edt_hint_from">From</string>
    <string name="edt_hint_to">To</string>
    <string name="btn_create_event">Create Event</string>
    <string name="my_account">My Account</string>
    <string name="uprade_premium">UpGrade To Premium</string>
    <string name="logout">Log Out</string>
</resources>