<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:paddingTop="@dimen/base_activity_top_space">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/arrow_back"
        android:layout_margin="10dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/txt_create_event"
                android:textColor="@color/colorYellow"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_event_name"
                style="@style/edt_yellow"
                android:maxLength="60"
                android:hint="@string/edt_hint_event_name" />

            <Spinner
                android:popupBackground="@color/colorLightYellow"
                android:layout_marginTop="5dp"
                android:id="@+id/spn_event_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_yellow"
                android:dropDownVerticalOffset="0dp"
                android:padding="12dp"/>

            <EditText
                android:visibility="gone"
                android:id="@+id/edt_event_type"
                style="@style/edt_yellow"
                android:hint="@string/edt_hint_event_type" />

           <!-- <EditText
                android:id="@+id/edt_event_address"
                style="@style/edt_yellow"
                android:hint="@string/edt_hint_address" />-->
            <TextView
                android:id="@+id/edt_event_address"
                style="@style/edt_yellow"
                android:hint="@string/edt_hint_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edt_event_country"
                    style="@style/edt_yellow"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:hint="@string/edt_hint_country" />

                <TextView
                    android:id="@+id/edt_event_city"
                    style="@style/edt_yellow"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:hint="@string/edt_hint_city" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_event_mobile_number"
                style="@style/edt_yellow"
                android:maxLength="10"
                android:inputType="number"
                android:hint="@string/edt_hint_mobile_number" />

            <EditText
                android:id="@+id/edt_event_description"
                style="@style/edt_yellow"
                android:maxLength="200"
                android:hint="@string/edt_hint_description" />

          <!--  <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">-->

                <TextView
                    android:onClick="onClick"
                    android:id="@+id/edt_event_from"
                    style="@style/edt_yellow"
                    android:layout_weight="1"
                    android:hint="@string/edt_hint_from" />

                <TextView
                    android:onClick="onClick"
                    android:id="@+id/edt_event_to"
                    style="@style/edt_yellow"
                    android:layout_weight="1"
                    android:hint="@string/edt_hint_to" />
         <!--   </LinearLayout>-->

            <Button
                android:onClick="onClick"
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_btn_yellow"
                android:text="@string/btn_create_event"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:onClick="onClick"
        android:id="@+id/arrow_back"
        style="@style/img_back_arrow_bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:rotation="180" />
</RelativeLayout>