<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:paddingTop="@dimen/base_activity_top_space"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@color/colorYellow"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:text="Louis Lowe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:gravity="center"
            android:text="LouisLowe@gmail.com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/uprade_premium"
            android:background="@drawable/bg_edt_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_chg_pwd"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/txt_change_pwd"
            android:background="@drawable/bg_edt_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_logout"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorYellow"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        style="@style/img_back_arrow_bottom"
        android:id="@+id/arrow_back"
        android:rotation="180"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"/>
</RelativeLayout>