<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_above="@+id/lin1">


        <include layout="@layout/view_header_logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dashboard_btn_height"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_edt_border"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_mail"
                    android:tint="@color/colorWhite" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/edt_hint_email"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dashboard_btn_height"
                android:layout_marginTop="15dp"
                android:background="@mipmap/bg_btn_img"
                android:text="@string/txt_submit"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_dont_have_account"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/txt_signup"
                android:textColor="@color/colorYellow"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_agree_terms"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:visibility="invisible" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrow_back"
            style="@style/img_back_arrow_bottom"
            android:onClick="onClick"
            android:src="@drawable/img_back_map" />

    </LinearLayout>
</RelativeLayout>
